--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,7 +15,8 @@
 
     <include
         layout="@layout/content_main"
-        android:layout_height="721dp" />
+        android:layout_height="match_parent"
+        android:layout_width="match_parent"/>
 
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbar"
