--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -34,15 +34,15 @@
         android:layout_marginTop="10dp"
         android:text="Dummy model"
         />
+
     <Button
         android:id="@+id/button2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
 
-        android:onClick="convertToGrey"
-        android:text="Action"
-        />
+        android:onClick="getFeatures"
+        android:text="Action" />
     <Button
         android:id="@+id/open_model_btn"
         android:layout_width="match_parent"
